WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294851
REGRESSION(
296360@main
) Broke WKSeparatedImageViews
https://bugs.webkit.org/show_bug.cgi?id=294851
Summary
REGRESSION(296360@main) Broke WKSeparatedImageViews
Etienne
Reported
2025-06-23 09:17:32 PDT
REGRESSION(
296360@main
) Broke WKSeparatedImageViews
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2025-06-23 09:27:47 PDT
<
rdar://problem/149583665
>
Etienne
Comment 2
2025-06-23 09:31:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47069
EWS
Comment 3
2025-06-23 15:29:18 PDT
Committed
296536@main
(9efbae20a35b): <
https://commits.webkit.org/296536@main
> Reviewed commits have been landed. Closing PR #47069 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug