REGRESSION(296360@main) Broke WKSeparatedImageViews https://bugs.webkit.org/show_bug.cgi?id=294851 <rdar://149583665>

Reviewed by Matt Woodrow.

`RemoteLayerBackingStoreProperties::updateCachedBuffers` shouldn't consume
the `m_bufferHandle` for WKSeparatedImageViews.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
Pass `hostingView` to `updateCachedBuffers` too.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStoreProperties::applyBackingStoreToLayer):
Always check `m_bufferHandle` before using it.
(WebKit::RemoteLayerBackingStoreProperties::updateCachedBuffers):
Don't consume the buffer handle for WKSeparatedImageViews.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreePropertyApplier.mm:
(WebKit::RemoteLayerTreePropertyApplier::applyPropertiesToLayer):
Pass `hostingView` to `updateCachedBuffers` too.

Canonical link: https://commits.webkit.org/296536@main